# python-homeworks

./: pyproject.toml
hw_1/: simple_nl.py  simple_tail.py  simple_wc.py
hw_1/artifacts/: nl_output.md  tail_output.md  wc_output.md
hw_1/artifacts/files/: long_file  short_file
hw_2/: Dockerfile  pyproject.toml  requirements.txt
hw_2/artifacts/task_1/: main.tex
hw_2/artifacts/task_2/: pypi_link
hw_2/latex_generator/: main.py
hw_2/latex_images_and_tables_generator/: __init__.py  images_and_tables_generator.py
hw_3/: pyproject.toml
hw_3/artifacts/task2/: matrix_add.txt  matrix_matmul.txt  matrix_mul.txt
hw_3/artifacts/task3/: C.txt  hash.txt
hw_3/matrix_lib/: task_1.py
hw_3/src/: main.py
hw_3/src/matrix_lib/: matrix.py  matrix_mixins.py
hw_4/: pyproject.toml
hw_4/artifacts/: fibonacci.txt  integrate.txt
hw_4/src/: fibonacci.py  integrate.py
