# pyproject.toml

[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hw_1"
version = "0.1.0"
description = "Simplified versions of nl, tail, wc utilities for hw1 are implemented."
dependencies = [
    "click >= 8.1.3",
]

[project.scripts]
simple_nl = "hw_1.simple_nl:simple_nl"
simple_tail = "hw_1.simple_tail:simple_tail"
simple_wc = "hw_1.simple_wc:simple_wc"