# pyproject.toml

[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hw_2"
version = "0.1.0"
dependencies = [
]

[project.scripts]
latex_generator = "latex_generator.main:generate_tex_file"

[tool.setuptools.packages.find]
where = ["."]
