[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hw_3"
version = "0.1.0"
dependencies = [
    "numpy>=1.20.0"
]

[project.scripts]
main = "main:generate_artifacts"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]